--- a/admin.html
+++ b/admin.html
@@ -3,136 +3,118 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>관리자 — Project.PAW</title>
+  <title>관리자 승인 - Project.PAW</title>
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
   <style>
-    .wrap { max-width:1040px; margin:0 auto; padding:20px 16px }
-    .toolbar { display:flex; gap:8px; flex-wrap:wrap; margin:6px 0 16px }
-    .toolbar input, .toolbar select { padding:10px; border:1px solid #e5e7eb; border-radius:10px }
-    .cards { display:grid; grid-template-columns:repeat(auto-fill,minmax(320px,1fr)); gap:12px }
-    .card { display:flex; flex-direction:column; gap:10px; padding:12px; border:1px solid #ddd; border-radius:12px; background:#fff }
-    .row { display:flex; gap:8px }
-    .row>* { flex:1 }
-    label { display:block; font-weight:700; margin-bottom:6px }
-    input { width:100%; padding:10px; border:1px solid #e5e7eb; border-radius:8px }
-    .chip { display:inline-block; padding:2px 10px; border-radius:999px; font-size:.85rem; border:1px solid #e5e7eb; color:#374151 }
-    .chip.ok { background:#ecfdf5; border-color:#bbf7d0; color:#065f46 }
-    .chip.pending { background:#fff7ed; border-color:#fed7aa; color:#9a3412 }
-    .actions { display:flex; gap:8px; justify-content:flex-end }
-    .btn { padding:10px 12px; border-radius:10px; border:1px solid #111; background:#111; color:#fff; cursor:pointer }
-    .btn.secondary { background:#fff; color:#111; border:1px solid #e5e7eb }
+    body { background:#fafafa; font-family:'Pretendard',sans-serif; }
+    .container { max-width:960px; margin:40px auto; padding:0 16px; }
+    h1 { font-size:1.5rem; font-weight:700; margin-bottom:20px; }
+    table { width:100%; border-collapse:collapse; margin-top:20px; }
+    th, td { border:1px solid #ddd; padding:10px; font-size:.95rem; }
+    th { background:#f7f7f7; text-align:left; }
+    td img { max-width:120px; border-radius:6px; }
+    .btn { display:inline-block; padding:8px 14px; border-radius:8px; font-weight:600; cursor:pointer; text-decoration:none; font-size:.9rem; }
+    .btn.approve { background:#4caf50; color:#fff; border:none; margin-right:6px; }
+    .btn.delete { background:#f44336; color:#fff; border:none; }
+    .muted { font-size:.85rem; color:#777; }
+    footer { margin-top:60px; padding:30px; text-align:center; font-size:.9rem; color:#888; border-top:1px solid #eee; }
   </style>
 </head>
 <body>
   <div data-include="header"></div>
-  <main class="wrap">
-    <h1 style="font-size:1.5rem;font-weight:900;margin:0 0 10px">관리자 대시보드</h1>
-    <p class="muted">임시 보안(비밀번호)만 적용됨. 실서비스는 Firebase Auth/Rules 필요.</p>
 
-    <div class="toolbar">
-      <input id="search" placeholder="이름/요약/설명/등록자 카카오ID 검색"/>
-      <select id="filter">
-        <option value="all">전체</option>
-        <option value="pending">대기</option>
-        <option value="approved">승인</option>
-      </select>
-      <button id="refresh" class="btn secondary">새로고침</button>
-    </div>
+  <main class="container">
+    <h1>프로젝트 승인 / 관리</h1>
+    <p class="muted">※ 이 페이지는 관리자 전용입니다.</p>
 
-    <div id="cards" class="cards"></div>
+    <table>
+      <thead>
+        <tr>
+          <th>대표 이미지</th>
+          <th>프로젝트 이름</th>
+          <th>요약</th>
+          <th>상태</th>
+          <th>액션</th>
+        </tr>
+      </thead>
+      <tbody id="projects-body">
+        <tr><td colspan="5" class="muted">불러오는 중...</td></tr>
+      </tbody>
+    </table>
   </main>
+
   <div data-include="footer"></div>
 
+  <!-- 내부 로직 -->
   <script type="module">
     import { injectLayout } from './js/include.js';
-    import { apiListProjects, apiToggleApprove } from './js/api.js';
+    import { fetchAllProjects, approveProject, deleteProject } from './assets/js/api.js';
 
-    injectLayout({ active:'about' });
+    injectLayout({ active:'admin' });
 
-    // 비밀번호 체크
-    (function(){
-      const EXPECT = 'paw-admin';
-      const viaQuery = new URL(location.href).searchParams.get('key');
-      if(viaQuery === EXPECT) return;
-      const input = prompt('관리자 비밀번호:');
-      if(input !== EXPECT){ alert('거부'); location.href='index.html'; }
-    })();
+    const $body = document.getElementById('projects-body');
 
-    const $cards = document.getElementById('cards');
-    const $search = document.getElementById('search');
-    const $filter = document.getElementById('filter');
-    const $refresh = document.getElementById('refresh');
-
-    function match(p,q,f){
-      if(f==='pending' && p.adminApproved) return false;
-      if(f==='approved' && !p.adminApproved) return false;
-      if(!q) return true;
-      const hay=[p.name,p.summary,p.description,p.registrantKakaoId].map(v=>(v??'')+'').join(' ').toLowerCase();
-      return hay.includes(q.toLowerCase());
+    function fmtStatus(p){
+      if(p.adminApproved) return "승인됨";
+      return "대기중";
     }
-
-    function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
 
     async function render(){
-      const status = $filter.value==='all' ? 'all' : $filter.value;
-      const list = (await apiListProjects({ status })).filter(p=>match(p,$search.value.trim(),$filter.value));
-
-      if(!list.length){
-        $cards.innerHTML = '<div class="muted">표시할 프로젝트 없음</div>';
-        return;
+      try {
+        const list = await fetchAllProjects();
+        if(!list.length){
+          $body.innerHTML = '<tr><td colspan="5" class="muted">등록된 프로젝트가 없습니다.</td></tr>';
+          return;
+        }
+        $body.innerHTML = list.map(p => `
+          <tr>
+            <td><img src="${p.coverUrl || (Array.isArray(p.images)&&p.images[0]) || 'img/placeholder.svg'}"/></td>
+            <td>${p.name ?? ''}</td>
+            <td>${p.summary ?? ''}</td>
+            <td>${fmtStatus(p)}</td>
+            <td>
+              ${!p.adminApproved ? `<button class="btn approve" data-id="${p.id}" data-action="approve">승인</button>` : ''}
+              <button class="btn delete" data-id="${p.id}" data-action="delete">삭제</button>
+            </td>
+          </tr>
+        `).join('');
+      } catch (e) {
+        console.error(e);
+        $body.innerHTML = '<tr><td colspan="5" class="muted">불러오기 실패</td></tr>';
       }
-
-      $cards.innerHTML = list.map(p => `
-        <div class="card" data-id="${p.id}">
-          <div class="row" style="align-items:center;gap:12px">
-            <img src="${p.representativeImageUrl || 'img/placeholder.svg'}" style="width:88px;height:88px;object-fit:cover;border-radius:10px;border:1px solid #eee"/>
-            <div style="flex:1">
-              <div style="font-weight:900">${p.name ?? '(이름 없음)'}
-                <span class="${p.adminApproved?'chip ok':'chip pending'}" style="margin-left:6px">
-                  ${p.adminApproved?'승인':'대기'}
-                </span>
-              </div>
-              <div class="muted">${p.summary ?? ''}</div>
-              <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
-            </div>
-          </div>
-          <div class="row">
-            <div><label>병원명</label><input name="hospitalName" value="${p.hospitalName ?? ''}"/></div>
-            <div><label>계좌번호</label><input name="bankAccount" value="${p.bankAccount ?? ''}"/></div>
-          </div>
-          <div><label>카카오톡 초대링크</label><input name="kakaoInviteLink" value="${p.kakaoInviteLink ?? ''}"/></div>
-          <div class="row">
-            <div><label>등록자 카카오ID</label><input disabled value="${p.registrantKakaoId ?? ''}"/></div>
-            <div><label>프로젝트 ID</label><input disabled value="${p.id}"/></div>
-          </div>
-          <div class="actions">
-            <a class="btn secondary" href="project.html?id=${encodeURIComponent(p.id)}">상세보기</a>
-            <button class="btn secondary" data-action="toggle">${p.adminApproved?'승인 해제':'승인하기'}</button>
-          </div>
-        </div>
-      `).join('');
     }
 
-    $cards.addEventListener('click', async (e)=>{
-      const btn = e.target.closest('button[data-action]');
-      if(!btn) return;
-      const card = btn.closest('.card');
-      const id = card?.dataset?.id;
-      if(!id) return;
-      if(btn.dataset.action==='toggle'){
-        const will = btn.textContent.includes('해제') ? false : true;
-        await apiToggleApprove(id, will);
-        render();
+    $body.addEventListener('click', async e => {
+      if(e.target.dataset.action){
+        const id = e.target.dataset.id;
+        const action = e.target.dataset.action;
+        if(action === 'approve'){
+          if(confirm("이 프로젝트를 승인하시겠습니까?")){
+            try {
+              await approveProject(id);
+              alert("승인 완료");
+              render();
+            } catch(err){
+              alert("승인 실패: " + err.message);
+            }
+          }
+        }
+        if(action === 'delete'){
+          if(confirm("정말 삭제하시겠습니까?")){
+            try {
+              await deleteProject(id);
+              alert("삭제 완료");
+              render();
+            } catch(err){
+              alert("삭제 실패: " + err.message);
+            }
+          }
+        }
       }
     });
 
-    $search.addEventListener('input', render);
-    $filter.addEventListener('change', render);
-    $refresh.addEventListener('click', render);
-
     render();
-  <script type="module" src="assets/js/admin.js"></script>
   </script>
 </body>
 </html>
