--- a/project_list.html
+++ b/project_list.html
@@ -1,68 +1,23 @@
 <!doctype html>
 <html lang="ko">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>프로젝트 목록 - Project.PAW</title>
-  <link rel="stylesheet" href="common.css"/>
-  <link rel="stylesheet" href="app.min.css"/>
-  <style>
-    body { background:#fafafa; font-family:'Pretendard',sans-serif; }
-    .projects { max-width:1040px; margin:50px auto; padding:0 16px; }
-    .projects h1 { font-size:1.6rem; font-weight:700; margin-bottom:20px; }
-    .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:16px; }
-    .card { background:#fff; border:1px solid #eee; border-radius:14px; padding:14px; display:flex; flex-direction:column; gap:10px; transition:all .2s; }
-    .card:hover { box-shadow:0 4px 10px rgba(0,0,0,0.05); transform:translateY(-2px); }
-    .card img { width:100%; height:180px; object-fit:cover; border-radius:10px; }
-    .card h3 { font-size:1.1rem; font-weight:700; margin:6px 0; }
-    .muted { color:#777; font-size:.9rem; }
-    footer { margin-top:60px; padding:30px; text-align:center; font-size:.9rem; color:#888; border-top:1px solid #eee; }
-  </style>
-</head>
+<head>...</head>
 <body>
   <div data-include="header"></div>
 
-  <!-- Projects Section -->
-  <section class="projects">
-    <h1>진행 중인 프로젝트</h1>
-    <div id="projects-grid" class="grid">
-      <div class="muted">불러오는 중...</div>
-    </div>
-  </section>
+  <section class="projects"> ... </section>
 
   <div data-include="footer"></div>
 
-  <!-- 내부 로직 -->
   <script type="module">
     import { injectLayout } from './js/include.js';
-    import { fetchApprovedProjects } from './assets/js/api.js';
+    import { fetchApprovedProjects } from './js/api.js';
 
     injectLayout({ active:'list' });
 
     const $grid = document.getElementById('projects-grid');
     function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
 
-    async function render(){
-      try {
-        const list = await fetchApprovedProjects();
-        if(!list.length){
-          $grid.innerHTML = '<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';
-          return;
-        }
-        $grid.innerHTML = list.map(p => `
-          <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
-            <img src="${(p.coverUrl || (Array.isArray(p.images)&&p.images[0]) || 'img/placeholder.svg')}" alt=""/>
-            <h3>${p.name ?? '(이름 없음)'}</h3>
-            <div class="muted">${p.summary ?? ''}</div>
-            <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
-          </a>
-        `).join('');
-      } catch (e) {
-        console.error(e);
-        $grid.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
-      }
-    }
-
+    async function render(){ ... }
     render();
   </script>
 </body>
