--- a/project.html
+++ b/project.html
@@ -7,139 +7,100 @@
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
   <style>
-    body { background:#fafafa; font-family:'Pretendard',sans-serif; }
-    .container { max-width:960px; margin:30px auto; padding:0 16px; }
-    .title { font-size:1.6rem; font-weight:700; margin:20px 0 10px; }
-    .summary { font-size:1rem; color:#666; margin-bottom:20px; }
-    .meta { font-size:.9rem; color:#888; margin-bottom:30px; }
-    .gallery { position:relative; overflow:hidden; border-radius:12px; margin-bottom:20px; }
-    .gallery img { width:100%; height:420px; object-fit:cover; display:block; }
-    .gallery-controls { position:absolute; top:50%; left:0; right:0; display:flex; justify-content:space-between; padding:0 10px; transform:translateY(-50%); }
-    .gallery-controls button { background:rgba(0,0,0,0.4); color:#fff; border:none; padding:8px 12px; border-radius:50%; cursor:pointer; }
-    .description { white-space:pre-line; font-size:1rem; line-height:1.6; color:#333; margin-top:30px; }
-    .receipts { margin-top:40px; }
-    .receipts h3 { font-size:1.2rem; font-weight:600; margin-bottom:12px; }
-    .receipts img { width:100%; max-width:320px; margin:8px; border:1px solid #ddd; border-radius:8px; }
-    .action { margin-top:40px; }
+    .project-container { max-width:800px; margin:40px auto; padding:0 16px; }
+    .project-header { margin-bottom:20px; }
+    .project-header h1 { font-size:1.6rem; font-weight:800; }
+    .muted { color:#666; font-size:.9rem; }
+    .slider { position:relative; overflow:hidden; border-radius:12px; margin:20px 0; }
+    .slider img { width:100%; display:none; }
+    .slider img.active { display:block; }
+    .slider-nav { position:absolute; top:50%; width:100%; display:flex; justify-content:space-between; transform:translateY(-50%); }
+    .slider-nav button { background:rgba(0,0,0,0.5); color:#fff; border:none; padding:6px 10px; border-radius:6px; cursor:pointer; }
     .btn { display:inline-block; padding:12px 20px; border-radius:12px; font-weight:600; cursor:pointer; text-decoration:none; }
-    .btn.primary { background:#111; color:#fff; }
-    .muted { color:#777; font-size:.9rem; }
-    footer { margin-top:60px; padding:30px; text-align:center; font-size:.9rem; color:#888; border-top:1px solid #eee; }
+    .btn.kakao { background:#FEE500; color:#111; }
   </style>
 </head>
 <body>
   <div data-include="header"></div>
 
-  <main class="container">
-    <div id="gallery" class="gallery">
-      <img id="gallery-img" src="img/placeholder.svg" alt="프로젝트 이미지"/>
-      <div class="gallery-controls">
-        <button id="prev">〈</button>
-        <button id="next">〉</button>
-      </div>
-    </div>
-
-    <h1 id="title" class="title">제목 불러오는 중...</h1>
-    <p id="summary" class="summary"></p>
-    <div id="meta" class="meta"></div>
-
-    <div id="description" class="description"></div>
-
-    <section class="receipts">
-      <h3>영수증 / 증빙 자료</h3>
-      <div id="receipts-box"></div>
-    </section>
-
-    <div class="action">
-      <a id="kakao-link" href="#" target="_blank" class="btn primary">🐾 카카오톡으로 연결하기</a>
+  <main class="project-container">
+    <div id="project-detail">
+      <div class="muted">불러오는 중...</div>
     </div>
   </main>
 
   <div data-include="footer"></div>
 
-  <!-- 내부 로직 -->
   <script type="module">
     import { injectLayout } from './js/include.js';
-    import { getProjectById } from './assets/js/api.js';
+    import { getProjectById } from './js/api.js';
 
-    injectLayout();
+    injectLayout({ active:'project' });
 
-    // URL 파라미터에서 id 추출
-    const params = new URLSearchParams(window.location.search);
-    const projectId = params.get('id');
+    const $detail = document.getElementById('project-detail');
 
-    const $title = document.getElementById('title');
-    const $summary = document.getElementById('summary');
-    const $meta = document.getElementById('meta');
-    const $desc = document.getElementById('description');
-    const $galleryImg = document.getElementById('gallery-img');
-    const $receiptsBox = document.getElementById('receipts-box');
-    const $kakao = document.getElementById('kakao-link');
-
-    let gallery = [];
-    let galleryIndex = 0;
-
-    function renderGallery(){
-      if(gallery.length){
-        $galleryImg.src = gallery[galleryIndex];
-      } else {
-        $galleryImg.src = 'img/placeholder.svg';
-      }
+    function getId(){
+      const params = new URLSearchParams(location.search);
+      return params.get("id");
     }
 
-    document.getElementById('prev').onclick = () => {
-      if(gallery.length){
-        galleryIndex = (galleryIndex - 1 + gallery.length) % gallery.length;
-        renderGallery();
-      }
-    };
-    document.getElementById('next').onclick = () => {
-      if(gallery.length){
-        galleryIndex = (galleryIndex + 1) % gallery.length;
-        renderGallery();
-      }
-    };
+    function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
+
+    function renderSlider(urls){
+      if(!urls || !urls.length) return '';
+      return `
+        <div class="slider">
+          ${urls.map((u,i)=>`<img src="${u}" class="${i===0?'active':''}"/>`).join('')}
+          <div class="slider-nav">
+            <button id="prevBtn">◀</button>
+            <button id="nextBtn">▶</button>
+          </div>
+        </div>`;
+    }
 
     async function render(){
-      if(!projectId){
-        $title.textContent = "잘못된 접근";
+      const id = getId();
+      if(!id){
+        $detail.innerHTML = '<div class="muted">잘못된 접근입니다.</div>';
         return;
       }
-
       try {
-        const p = await getProjectById(projectId);
+        const p = await getProjectById(id);
         if(!p){
-          $title.textContent = "프로젝트를 찾을 수 없습니다.";
+          $detail.innerHTML = '<div class="muted">존재하지 않는 프로젝트입니다.</div>';
           return;
         }
 
-        $title.textContent = p.name ?? "(제목 없음)";
-        $summary.textContent = p.summary ?? "";
-        $meta.innerHTML = `목표: ${Number(p.goalAmount||0).toLocaleString()}원 · 부담: ${Number(p.rescuerContribution||0).toLocaleString()}원 · 구조자: ${p.rescuerName ?? ''}`;
-        $desc.textContent = p.description ?? "";
+        $detail.innerHTML = `
+          <div class="project-header">
+            <h1>${p.name ?? '(이름 없음)'}</h1>
+            <div class="muted">구조자: ${p.rescuerName ?? ''}</div>
+          </div>
+          <img src="${p.coverUrl || 'img/placeholder.svg'}" style="width:100%; border-radius:12px; margin-bottom:20px;"/>
+          ${renderSlider(p.galleryUrls)}
+          <p>${p.description ?? ''}</p>
+          <p class="muted">목표 금액: ${fmt(p.goalAmount)}원</p>
+          <p class="muted">구조자 부담금: ${fmt(p.rescuerContribution)}원</p>
+          <p class="muted">지지자 수: ${fmt(p.supportersCount)}</p>
+          ${p.registrantKakaoId ? `<a href="https://open.kakao.com/o/${p.registrantKakaoId}" target="_blank" class="btn kakao">카카오톡으로 참여하기</a>` : ''}
+        `;
 
-        // 갤러리
-        gallery = p.galleryUrls && p.galleryUrls.length ? p.galleryUrls : (p.coverUrl ? [p.coverUrl] : []);
-        galleryIndex = 0;
-        renderGallery();
-
-        // 영수증
-        if(p.receiptUrls && p.receiptUrls.length){
-          $receiptsBox.innerHTML = p.receiptUrls.map(url => `<img src="${url}" alt="receipt"/>`).join('');
-        } else {
-          $receiptsBox.innerHTML = '<div class="muted">증빙 자료가 없습니다.</div>';
+        // 슬라이더 기능
+        const imgs = $detail.querySelectorAll('.slider img');
+        if(imgs.length){
+          let idx = 0;
+          const prev = document.getElementById('prevBtn');
+          const next = document.getElementById('nextBtn');
+          function show(i){
+            imgs.forEach((img,j)=>img.classList.toggle('active', j===i));
+          }
+          prev.addEventListener('click', ()=>{ idx = (idx-1+imgs.length)%imgs.length; show(idx); });
+          next.addEventListener('click', ()=>{ idx = (idx+1)%imgs.length; show(idx); });
         }
 
-        // 카톡 연결
-        if(p.registrantKakaoId){
-          $kakao.href = `https://open.kakao.com/o/${p.registrantKakaoId}`;
-        } else {
-          $kakao.style.display = 'none';
-        }
-
-      } catch (e) {
+      } catch(e){
         console.error(e);
-        $title.textContent = "불러오기 실패";
+        $detail.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
       }
     }
 
